Bug Fixes 09/May/2022

--- a/app/src/main/res/layout/activity_withdraw_instant_transaction.xml
+++ b/app/src/main/res/layout/activity_withdraw_instant_transaction.xml
@@ -291,6 +291,7 @@
                               android:textSize="@dimen/_11ssp" />
                       </LinearLayout>
                       <LinearLayout
+                          android:id="@+id/account_balance_ll"
                           android:layout_width="match_parent"
                           android:layout_height="match_parent"
                           android:orientation="horizontal"
