--- a/app/src/main/res/layout/activity_additional_benifitial_owners.xml
+++ b/app/src/main/res/layout/activity_additional_benifitial_owners.xml
@@ -77,7 +77,7 @@
             android:textSize="@dimen/_11ssp" />
     </LinearLayout>
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/topLL"
@@ -172,7 +172,7 @@
 
 
 
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
 
     <androidx.cardview.widget.CardView
