--- a/app/src/main/res/layout/activity_ssnoutline_box_number_edit_text.xml
+++ b/app/src/main/res/layout/activity_ssnoutline_box_number_edit_text.xml
@@ -72,9 +72,9 @@
             android:digits="0123456789"
             android:fontFamily="@font/opensans_semibold"
             android:hint="•••-••-••••"
+            android:inputType="number"
             android:imeOptions="actionDone"
             android:importantForAutofill="noExcludeDescendants"
-            android:inputType="numberPassword"
             android:maxLines="1"
             android:padding="14dp"
             android:singleLine="true"
@@ -97,7 +97,7 @@
             android:hint="••-•••••••"
             android:imeOptions="actionDone"
             android:importantForAutofill="noExcludeDescendants"
-            android:inputType="numberPassword"
+            android:inputType="number"
             android:maxLines="1"
             android:padding="14dp"
             android:singleLine="true"
