--- a/app/src/main/res/layout/merchant_transactions_filter.xml
+++ b/app/src/main/res/layout/merchant_transactions_filter.xml
@@ -277,7 +277,7 @@
                     android:hint="(CYN)"
                     android:imeOptions="actionDone"
                     android:inputType="numberDecimal"
-                    android:maxLength="@string/maxlength"
+                    android:maxLength="8"
                     android:maxLines="1"
                     android:singleLine="true"
                     android:textColor="@color/primary_black"
@@ -314,7 +314,7 @@
                     android:hint="(CYN)"
                     android:imeOptions="actionDone"
                     android:inputType="numberDecimal"
-                    android:maxLength="@string/maxlength"
+                    android:maxLength="8"
                     android:textColor="@color/primary_black"
                     android:textColorHint="@color/light_gray"
                     android:textCursorDrawable="@drawable/cursor_color"
