--- a/app/src/main/res/layout/insufficient_funds_token_account_dialog.xml
+++ b/app/src/main/res/layout/insufficient_funds_token_account_dialog.xml
@@ -96,6 +96,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
+                android:layout_marginStart="@dimen/_3sdp"
                 android:fontFamily="@font/opensans_semibold"
                 android:text=""
                 android:textAlignment="textStart"
