Merchant Bug Fix

--- a/app/src/main/res/layout/activity_review_application.xml
+++ b/app/src/main/res/layout/activity_review_application.xml
@@ -179,7 +179,7 @@
                             android:id="@+id/llEIN"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="right|center"
+                            android:gravity="right|center"
                             android:background="@drawable/ic_eyeclose"
                             android:paddingTop="@dimen/_5sdp"
                             android:paddingBottom="@dimen/_5sdp"
