--- a/app/src/main/res/layout/activity_business_profile.xml
+++ b/app/src/main/res/layout/activity_business_profile.xml
@@ -154,20 +154,20 @@
                                     android:layout_height="match_parent"
                                     android:scaleType="fitXY"
                                     android:contentDescription="@string/profile_image"
-                                    android:src="@drawable/ic_profile_male_user"
-                                    android:visibility="gone" />
+                                    android:src="@drawable/acct_profile"
+                                    android:visibility="visible" />
 
                                 <TextView
                                     android:id="@+id/b_imageTextTV"
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
-                                    android:background="@color/blue_light"
+                                    android:background="@color/bg_view_color"
                                     android:fontFamily="@font/opensans_bold"
                                     android:gravity="center"
                                     android:text="AO"
                                     android:textColor="@color/primary_green"
                                     android:textSize="@dimen/_18ssp"
-                                    android:visibility="visible" />
+                                    android:visibility="gone" />
 
                             </androidx.cardview.widget.CardView>
                         </androidx.constraintlayout.widget.ConstraintLayout>
