--- a/app/src/main/res/layout/additional_information_change.xml
+++ b/app/src/main/res/layout/additional_information_change.xml
@@ -18,12 +18,12 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="@dimen/_6sdp">
+            app:cardCornerRadius="@dimen/_10sdp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/et_bg_gray"
+                android:background="@drawable/aditional_bg_corners"
                 android:orientation="vertical"
                 android:paddingStart="@dimen/_11sdp"
                 android:paddingTop="@dimen/_11sdp"
