--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -553,7 +553,8 @@
                                     android:fontFamily="@font/opensans_regular"
                                     android:text="Our team is still reviewing your account. This process may take \nup to 3 business days."
                                     android:textColor="@color/primary_black"
-                                    android:textSize="@dimen/_11ssp" />
+                                    android:textSize="@dimen/_11ssp"
+                                    android:layout_marginBottom="@dimen/_16sdp"/>
 
 
                             </LinearLayout>
