--- a/app/src/main/res/layout/additional_document_cust_item.xml
+++ b/app/src/main/res/layout/additional_document_cust_item.xml
@@ -40,7 +40,7 @@
                 android:fontFamily="@font/opensans_regular"
                 android:text="@string/upload_file"
                 android:textColor="@color/primary_black"
-                android:textSize="@dimen/_9ssp"
+                android:textSize="@dimen/_10ssp"
                 android:visibility="visible" />
 
             <LinearLayout
@@ -54,7 +54,7 @@
                 <LinearLayout
                     android:id="@+id/uploadedSucess"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/_5sdp"
                     android:layout_weight="1"
                     android:orientation="vertical"
@@ -66,7 +66,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/_1sdp"
                         android:fontFamily="@font/opensans_semibold"
-                        android:gravity="center"
+                        android:gravity="left"
                         android:text="Uploaded"
                         android:textColor="@color/primary_color"
                         android:textSize="@dimen/_10ssp" />
