--- a/app/src/main/res/layout/activity_customer_profile.xml
+++ b/app/src/main/res/layout/activity_customer_profile.xml
@@ -161,7 +161,7 @@
                                     android:id="@+id/imageTextTV"
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
-                                    android:background="@color/blue_light"
+                                    android:background="@color/profile_gray"
                                     android:fontFamily="@font/opensans_bold"
                                     android:gravity="center"
                                     android:text="VT"
