--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -101,6 +101,7 @@
     <color name="notif_delete_bg">#FCE9E8</color>
     <color name="idve_complete">#daeced</color>
     <color name="cyn_color">#cccccc</color>
+    <color name="profile_gray">#f0f4f5</color>
 
 
 </resources>
