--- a/app/src/main/res/layout/list_items.xml
+++ b/app/src/main/res/layout/list_items.xml
@@ -18,20 +18,20 @@
             android:paddingTop="@dimen/_15sdp"
             android:paddingEnd="@dimen/_10sdp"
             android:paddingBottom="@dimen/_15sdp">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                >
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/listagreementsTV"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/opensans_semibold"
-                android:textColor="@color/primary_black"
-                android:layout_marginEnd="@dimen/_1sdp"
-                android:textSize="@dimen/_12ssp" />
+                <TextView
+                    android:id="@+id/listagreementsTV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/_1sdp"
+                    android:fontFamily="@font/opensans_semibold"
+                    android:textColor="@color/primary_black"
+                    android:textSize="@dimen/_12ssp" />
 
                 <TextView
                     android:id="@+id/listDocsTV"
