--- a/app/src/main/res/layout/ssn_popup.xml
+++ b/app/src/main/res/layout/ssn_popup.xml
@@ -17,7 +17,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginBottom="@dimen/_10sdp">
 
             <TextView
                 android:id="@+id/typeTV"
@@ -38,11 +39,18 @@
 
         </LinearLayout>
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/light_gray"
+            android:visibility="visible"
+            android:layout_marginVertical="@dimen/_5sdp"/>
+
         <LinearLayout
             android:id="@+id/einLL"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_15sdp"
+            android:layout_marginTop="@dimen/_10sdp"
             android:layout_marginBottom="@dimen/_10sdp"
             android:orientation="horizontal">
 
@@ -58,11 +66,7 @@
 
         </LinearLayout>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/light_gray"
-            android:visibility="gone"/>
+
 
         <LinearLayout
             android:id="@+id/ssnLL"
@@ -71,7 +75,7 @@
             android:layout_marginTop="@dimen/_10sdp"
             android:layout_marginBottom="@dimen/_10sdp"
             android:orientation="horizontal"
-            android:visibility="visible">
+            android:visibility="gone">
 
             <TextView
                 android:id="@+id/ssnTV"
