--- a/app/src/main/res/layout/additional_information_change.xml
+++ b/app/src/main/res/layout/additional_information_change.xml
@@ -18,7 +18,8 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="@dimen/_10sdp">
+            app:cardCornerRadius="@dimen/_10sdp"
+            android:layout_margin="@dimen/_3sdp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -45,9 +46,8 @@
                         android:layout_marginEnd="@dimen/_2sdp"
                         android:src="@drawable/ic_active_complete"
                         android:visibility="invisible" />
-
                     <TextView
-                        android:id="@+id/comapny_nameTV"
+                        android:id="@+id/display_nameTV"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
@@ -56,7 +56,23 @@
                         android:layout_marginBottom="@dimen/_5sdp"
                         android:fontFamily="@font/opensans_semibold"
                         android:textColor="@color/dark_grey"
+                        android:text=""
                         android:textSize="@dimen/_11ssp"
+                        android:visibility="visible" />
+
+                    <TextView
+                        android:id="@+id/comapny_nameTV"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginStart="@dimen/_5sdp"
+                        android:layout_marginTop="@dimen/_5sdp"
+                        android:layout_marginBottom="@dimen/_5sdp"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/opensans_semibold"
+                        android:textColor="@color/dark_grey"
+                        android:textSize="@dimen/_11ssp"
+                        android:text=""
                         android:visibility="visible" />
                 </LinearLayout>
 
