--- a/app/src/main/res/layout/additional_website_changes_item.xml
+++ b/app/src/main/res/layout/additional_website_changes_item.xml
@@ -25,7 +25,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/opensans_regular"
-                android:textColor="@color/dark_gray" />
+                android:textColor="@color/vlight_gray" />
 
             <TextView
                 android:id="@+id/tvheading"
