Bug Fixes Fixed Bugs in Merchant Flow V2 CV2QA-3092

--- a/app/src/main/res/layout/fragment_set_limit.xml
+++ b/app/src/main/res/layout/fragment_set_limit.xml
@@ -51,6 +51,8 @@
                 android:layout_height="@dimen/_70sdp"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center"
+                android:longClickable="false"
+                android:textIsSelectable="false"
                 android:background="@android:color/transparent"
                 android:cursorVisible="true"
                 android:ellipsize="end"
@@ -61,6 +63,7 @@
                 android:maxLength="@string/maxlength"
                 android:singleLine="true"
                 android:text=""
+                android:textDirection="rtl"
                 android:textColor="@color/primary_black"
                 android:textColorHint="@color/light_gray"
                 android:textCursorDrawable="@drawable/cursorcolor"
