bug fixes 12_may

--- a/app/src/main/res/layout/activity_add_payment_signet.xml
+++ b/app/src/main/res/layout/activity_add_payment_signet.xml
@@ -91,6 +91,7 @@
                         android:id="@+id/etName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                         android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                         android:fontFamily="@font/opensans_semibold"
                         android:imeOptions="actionNext"
@@ -222,6 +223,7 @@
                             android:id="@+id/etAddress1"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                             android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890/-#&amp;(),:.;"
                             android:fontFamily="@font/opensans_semibold"
                             android:imeOptions="actionNext"
@@ -281,6 +283,7 @@
                             android:id="@+id/etAddress2"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                             android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890/-#&amp;(),:.;"
                             android:fontFamily="@font/opensans_semibold"
                             android:imeOptions="actionNext"
