--- a/app/src/main/res/layout/activity_verification_failed.xml
+++ b/app/src/main/res/layout/activity_verification_failed.xml
@@ -17,13 +17,13 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true"
         android:scrollbars="none">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/_21sdp"
+            android:paddingStart="@dimen/_21sdp"
+            android:paddingEnd="@dimen/_21sdp"
             android:orientation="vertical">
 
             <ImageView
@@ -58,9 +58,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_14sdp"
                 android:fontFamily="@font/opensans_regular"
+                android:layout_gravity="center"
                 android:text="@string/interest_in_coyni_merchant_application"
                 android:textColor="@color/primary_black"
-                android:textSize="@dimen/_11ssp" />
+                android:textSize="@dimen/_12ssp" />
 
             <TextView
                 android:id="@+id/tv_legal_name"
@@ -87,14 +88,14 @@
                 android:fontFamily="@font/opensans_regular"
                 android:text="@string/we_thank_for_interest"
                 android:textColor="@color/primary_black"
-                android:textSize="@dimen/_11ssp" />
+                android:textSize="@dimen/_12ssp" />
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cv_done"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_50sdp"
-                android:layout_marginBottom="@dimen/_5sdp"
+                android:layout_marginBottom="@dimen/_10sdp"
                 app:cardBackgroundColor="@color/primary_color"
                 app:cardCornerRadius="@dimen/_22sdp">
 
