--- a/app/src/main/res/layout/activity_edit_team_member.xml
+++ b/app/src/main/res/layout/activity_edit_team_member.xml
@@ -306,9 +306,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/opensans_regular"
-                android:text="*Please Note: New team members get full\nadministrator permission"
+                android:text="*Please Note: New team members get full administrator permission"
                 android:textColor="@color/xdark_gray"
-                android:textSize="@dimen/_11ssp" />
+                android:textSize="@dimen/_11ssp"
+                android:layout_marginTop="@dimen/_10sdp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
