--- a/app/src/main/res/layout/activity_team.xml
+++ b/app/src/main/res/layout/activity_team.xml
@@ -111,16 +111,15 @@
     </LinearLayout>
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cvAddPayment"
+        android:id="@+id/teamsCV"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/_11sdp"
         android:layout_marginVertical="@dimen/_11sdp"
         app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="10dp">
 
         <LinearLayout
-            android:id="@+id/addTeamMemberL"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginHorizontal="@dimen/_10sdp"
@@ -128,7 +127,8 @@
             android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:id="@+id/addTeamMemberL"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:layout_marginEnd="@dimen/_10sdp"
@@ -153,10 +153,12 @@
             </LinearLayout>
 
             <View
+                android:id="@+id/dividerView"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_1sdp"
                 android:layout_marginBottom="@dimen/_2sdp"
-                android:background="@color/viewcolor" />
+                android:background="@color/viewcolor"
+                android:visibility="gone"/>
 
             <!--            <ScrollView-->
             <!--                android:layout_width="match_parent"-->
@@ -167,23 +169,22 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvTeam"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:visibility="gone"/>
+
+            <TextView
+                android:id="@+id/noTeamMemberTV"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/_20sdp"
+                android:fontFamily="@font/opensans_regular"
+                android:gravity="center_vertical|center_horizontal"
+                android:text="Team member not found"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_11ssp"
+                android:visibility="visible" />
             <!--            </ScrollView>-->
         </LinearLayout>
     </androidx.cardview.widget.CardView>
-
-
-    <TextView
-        android:id="@+id/no_team_member"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/_20sdp"
-        android:fontFamily="@font/opensans_regular"
-        android:gravity="center_vertical|center_horizontal"
-        android:text="Team member not found"
-        android:textColor="@color/primary_black"
-        android:textSize="@dimen/_11ssp"
-        android:visibility="gone" />
-
 
 </LinearLayout>
