--- a/app/src/main/res/layout/fragment_business_dashboard.xml
+++ b/app/src/main/res/layout/fragment_business_dashboard.xml
@@ -1674,7 +1674,8 @@
                             android:layout_height="match_parent"
                             android:layout_gravity="center_vertical"
                             android:background="@color/white"
-                            android:orientation="vertical">
+                            android:orientation="vertical"
+                            android:gravity="center">
 
                             <ImageView
                                 android:layout_width="wrap_content"
