bug fixes_16_may

--- a/app/src/main/res/layout/activity_business_batch_payout_search.xml
+++ b/app/src/main/res/layout/activity_business_batch_payout_search.xml
@@ -66,14 +66,13 @@
                         android:layout_marginStart="@dimen/_8sdp"
                         android:layout_marginEnd="@dimen/_5sdp"
                         android:layout_weight="1"
-                        android:autofillHints="emailAddress"
                         android:background="@android:color/transparent"
                         android:cursorVisible="true"
+                        android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                         android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
                         android:fontFamily="@font/opensans_regular"
                         android:hint="Payout ID"
                         android:imeOptions="actionDone"
-                        android:inputType="textVisiblePassword"
                         android:maxLength="35"
                         android:maxLines="1"
                         android:singleLine="true"
