--- a/app/src/main/res/layout/activity_withdraw_token.xml
+++ b/app/src/main/res/layout/activity_withdraw_token.xml
@@ -271,7 +271,11 @@
                                     android:gravity="center_vertical|right"
                                     android:hint="0.00"
                                     android:inputType="numberDecimal"
+                                    android:autofillHints="creditCardSecurityCode"
                                     android:maxLength="@string/maxlength"
+                                    android:clickable="false"
+                                    android:longClickable="false"
+                                    android:singleLine="true"
                                     android:textColor="@color/primary_black"
                                     android:textColorHint="@color/light_gray"
                                     android:textCursorDrawable="@drawable/cursorcolor"
