--- a/app/src/main/res/layout/activity_reserve_releases.xml
+++ b/app/src/main/res/layout/activity_reserve_releases.xml
@@ -77,6 +77,7 @@
                         android:layout_weight="1"
                         android:background="@android:color/transparent"
                         android:cursorVisible="true"
+                        android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                         android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
                         android:fontFamily="@font/opensans_regular"
                         android:hint="@string/search_by_reserve_id"
