--- a/app/src/main/res/layout/activity_business_tracker_account.xml
+++ b/app/src/main/res/layout/activity_business_tracker_account.xml
@@ -22,9 +22,9 @@
                 android:id="@+id/businessTrackerCloseIV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="@dimen/_10sdp"
                 android:layout_marginStart="@dimen/_16sdp"
                 android:layout_marginTop="@dimen/_39sdp"
+                android:padding="@dimen/_10sdp"
                 android:src="@drawable/ic_x"
                 android:visibility="visible" />
 
@@ -543,9 +543,7 @@
                             android:layout_marginTop="@dimen/_2sdp"
                             android:layout_marginRight="@dimen/_10sdp"
                             android:gravity="right"
-                            android:src="@drawable/ic_add_payment_business"
-
-                            />
+                            android:src="@drawable/ic_add_payment_business" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
