--- a/app/src/main/res/layout/activity_business_profile.xml
+++ b/app/src/main/res/layout/activity_business_profile.xml
@@ -98,7 +98,7 @@
 
                             <TextView
                                 android:id="@+id/b_tvACStatus"
-                                android:layout_width="match_parent"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="5dp"
                                 android:layout_marginTop="@dimen/_6sdp"
